compiler/testData/diagnostics/tests/functionLiterals/emptyLambdaTypeMismatchDiagnostic.diag.txt
/emptyLambdaTypeMismatchDiagnostic.kt:4:9: error: type mismatch: inferred type is Unit but String was expected
    foo {}
        ^^
/emptyLambdaTypeMismatchDiagnostic.kt:4:10: error: type mismatch: inferred type is Unit but String was expected
    foo {}
         ^

